cropping finally working correctly, accounting for resizable container

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,6 +40,12 @@ body {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 .demo .viewer .marquee {
   z-index: 9999;
